# puzzlesg

./: .gitignore  README.md
cpp/: .ycm_extra_conf.py  CMakeLists.txt  run_all_tests.py  sudokunique.cpp  template.cpp
cpp/10kindsofpeople/: 10kindsofpeople.cpp
cpp/2048/: 2048.cpp
cpp/3dprinter/: 3dprinter.cpp
cpp/4thought/: 4thought.cpp
cpp/abandonedanimal/: abandonedanimal.cpp
cpp/ada/: ada.cpp
cpp/akcija/: akcija.cpp
cpp/alicedigital/: alicedigital.cpp
cpp/anotherdice/: anotherdice.cpp
cpp/anthonyanddiablo/: anthonyanddiablo.cpp
cpp/antiarithmetic/: antiarithmetic.cpp
cpp/apparatus/: apparatus.cpp
cpp/arable/: arable.cpp  pointinpolygon.h
cpp/arcticnetwork/: arcticnetwork.cpp
cpp/autocorrect/: autocorrect.cpp
cpp/bachetsgame/: bachetsgame.cpp
cpp/backspace/: backspace.cpp
cpp/balanceddiet/: balanceddiet.cpp
cpp/baloni/: baloni.cpp
cpp/barica/: barica.cpp
cpp/base2palindrome/: base2palindrome.cpp
cpp/beavergnaw/: beavergnaw.cpp
cpp/beehives/: beehives.cpp
cpp/bing/: bing.cpp
cpp/birds/: birds.cpp
cpp/blackout/: blackout.cpp
cpp/borg/: borg.cpp
cpp/bottledup/: bottledup.cpp
cpp/boxes/: boxes.cpp  generator.py  generator2.py
cpp/brexit/: brexit.cpp
cpp/bribingeve/: bribingeve.cpp
cpp/brickwall/: brickwall.cpp
cpp/builddeps/: builddeps.cpp
cpp/candydivision/: candydivision.cpp  factorization.h
cpp/catering/: catering.cpp  fordfulkerson.h
cpp/chemistsvows/: chemistsvows.cpp
cpp/classy/: classy.cpp
cpp/cokolada/: cokolada.cpp
cpp/collapse/: collapse.cpp
cpp/color/: color.cpp
cpp/communication/: communication.cpp
cpp/consecutivesums/: consecutivesums.cpp
cpp/conversationlog/: conversationlog.cpp
cpp/convex/: convex.cpp
cpp/crypto/: crypto.cpp
cpp/cudoviste/: cudoviste.cpp
cpp/daceydice/: daceydice.cpp
cpp/dartscores/: dartscores.cpp
cpp/deathstar/: deathstar.cpp
cpp/dictionaryattack/: dictionaryattack.cpp
cpp/disastrousdoubling/: disastrousdoubling.cpp
cpp/divisors/: divisors.cpp
cpp/dominant/: '  dominant.cpp
cpp/dream/: dream.cpp
cpp/droppingdirections/: droppingdirections.cpp
cpp/elevatortrouble/: elevatortrouble.cpp
cpp/emergency/: emergency.cpp
cpp/encodedmessage/: encodedmessage.cpp
cpp/engineeringenglish/: foo.ans
cpp/enlarginghashtables/: enlarginghashtables.cpp
cpp/equilibrium/: equilibrium.cpp
cpp/estate/: estate.cpp
cpp/eventplanning/: eventplanning.cpp
cpp/evenup/: evenup.cpp
cpp/exchangerates/: exchangerates.cpp
cpp/excursion/: excursion.cpp
cpp/facility/: disjoint_set.h  facility.cpp
cpp/faray/: faray.cpp
cpp/fastfood/: fastfood.cpp
cpp/fixingbugs/: fixingbugs.cpp
cpp/flowlayout/: flowlayout.cpp
cpp/flowshop/: flowshop.cpp
cpp/flyingsafely/: flyingsafely.cpp  minspantree.h
cpp/fractionallotion/: fractionallotion.cpp
cpp/frozenrose/: frozenrose.cpp
cpp/gamerank/: gamerank.cpp
cpp/george/: george.cpp
cpp/geppetto/: geppetto.cpp
cpp/gold/: gold.cpp
cpp/goodmorning/: goodmorning.cpp
cpp/grandpabernie/: grandpabernie.cpp
cpp/greatswercporto/: greatswercporto.cpp
cpp/grille/: grille.cpp
cpp/growlinggears/: growlinggears.cpp
cpp/happyprime/: happyprime.cpp  primesieve.cpp
cpp/hidingplaces/: hidingplaces.cpp
cpp/hillnumbers/: hillnumbers.cpp
cpp/hnumbers/: combinatorics.h  factorization.h  hnumbers.cpp
cpp/honey/: honey.cpp
cpp/humancannonball/: dijkstra.cpp  dijkstra.h  humancannonball.cpp
cpp/imagedecoding/: imagedecoding.cpp
cpp/imageprocessing/: imageprocessing.cpp
cpp/interestingintegers/: gcd.h
cpp/islandhopping/: islandhopping.cpp
cpp/islands/: islands.cpp
cpp/jabuke/: jabuke.cpp  pointinpolygon.cpp
cpp/jetpack/: jetpack.cpp
cpp/juryjeopardy/: juryjeopardy.cpp
cpp/keyboard/: keyboard.cpp
cpp/keypad/: keypad.cpp
cpp/knapsackcollection/: knapsackcollection.cpp
cpp/lexicography/: lexicography.cpp
cpp/lockedtreasure/: lockedtreasure.cpp
cpp/managingpackaging/: managingpackaging.cpp
cpp/mancala/: mancala.cpp
cpp/marblestree/: marblestree.cpp
cpp/matryoshka/: matryoshka.cpp
cpp/maxloot/: maxloot.cpp
cpp/memory2/: memory2.cpp
cpp/milestones/: milestones.cpp
cpp/more10/: disjoint_set.cpp  indexmap.h  more10.cpp
cpp/mosquito/: mosquito.cpp
cpp/multigram/: multigram.cpp
cpp/names/: names.py
cpp/narrowartgallery/: narrowartgallery.cpp
cpp/natjecanje/: natjecanje.cpp
cpp/oop/: avltree.cpp  brute_force.py  oop.cpp
cpp/otpor/: otpor.cpp
cpp/palindromesubstring/: palindromesubstring.cpp
cpp/parking/: parking.cpp
cpp/pascal/: pascal.cpp
cpp/pathtracing/: pathtracing.cpp
cpp/pebblesolitaire2/: pebblesolitaire2.cpp
cpp/pivot/: pivot.cpp
cpp/poklon/: poklon.cpp
cpp/powerstrings/: powerstrings.cpp
cpp/prerequisites/: prerequisites.cpp
cpp/primal/: primal.cpp
cpp/primereduction/: primereduction.cpp
cpp/prinova/: prinova.cpp
cpp/pripreme/: pripreme.cpp
cpp/prosti/: prosti.cpp
cpp/prozor/: prozor.cpp
cpp/prsteni/: prsteni.cpp
cpp/pubs/: pubs.cpp
cpp/putovanje/: putovanje.cpp
cpp/randomwalking/: randomwalking.cpp
cpp/ratings/: ratings.cpp
cpp/rationalsequence/: rationalsequence.cpp
cpp/reachableroads/: reachableroads.cpp
cpp/relatives/: relatives.cpp
cpp/ricochetrobots/: ricochetrobots.cpp
cpp/rockscissorspaper/: rockscissorspaper.cpp
cpp/rot/: rot.cpp
cpp/runningsteps/: runningsteps.cpp
cpp/safe/: safe.cpp
cpp/saferacing/: saferacing.cpp
cpp/safety/: generator.py  safety.cpp
cpp/satisfiability/: satisfiability.cpp
cpp/scenes/: scenes.cpp
cpp/secretchamber/: foo.in  secretchamber.cpp
cpp/secretsanta/: secretsanta.cpp
cpp/sequence/: sequence.cpp
cpp/sequences/: sequences.cpp
cpp/seti/: seti.cpp
cpp/settlers2/: settlers2.cpp
cpp/sms/: sms.cpp
cpp/snapperhard/: snapperhard.cpp
cpp/solitaire/: solitaire.cpp
cpp/speed/: speed.cpp
cpp/speedyescape/: speedyescape.cpp
cpp/squawk/: squawk.cpp
cpp/standings/: standings.cpp
cpp/stickysituation/: stickysituation.cpp
cpp/sudokunique/: sudokunique.cpp
cpp/sumsets/: sumsets.cpp
cpp/targetpractice/: targetpractice.cpp
(+892 files in other folders)
