cmake_minimum_required(VERSION 3.3)
project(cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(10kindsofpeople 10kindsofpeople/10kindsofpeople.cpp)
add_executable(2048 2048/2048.cpp)
add_executable(4thought 4thought/4thought.cpp)
add_executable(arable arable/arable.cpp arable/pointinpolygon.cpp arable/segmentintersection.cpp)
add_executable(autocorrect autocorrect/autocorrect.cpp)
add_executable(bachetsgame bachetsgame/bachetsgame.cpp)
add_executable(backspace backspace/backspace.cpp)
add_executable(baloni baloni/baloni.cpp)
add_executable(base2palindrome base2palindrome/base2palindrome.cpp)
add_executable(beavergnaw beavergnaw/beavergnaw.cpp)
add_executable(birds birds/birds.cpp)
add_executable(bing bing/bing.cpp)
add_executable(bobby bobby/bobby.cpp)
add_executable(boxes boxes/boxes.cpp)
add_executable(candydivision candydivision/candydivision.cpp)
add_executable(ceremony ceremony/ceremony.cpp)
add_executable(chemistsvows chemistsvows/chemistsvows.cpp)
add_executable(classy classy/classy.cpp)
add_executable(codes codes/codes.cpp)
add_executable(cokolada cokolada/cokolada.cpp)
add_executable(collapse collapse/collapse.cpp)
add_executable(color color/color.cpp)
add_executable(constrainedfreedomofchoice constrainedfreedomofchoice/constrainedfreedomofchoice.cpp)
add_executable(conversationlog conversationlog/conversationlog.cpp)
add_executable(conundrum conundrum/conundrum.cpp)
add_executable(daceydice daceydice/daceydice.cpp)
add_executable(dartscores dartscores/dartscores.cpp)
add_executable(deathstar deathstar/deathstar.cpp)
add_executable(dejavu dejavu/dejavu.cpp)
add_executable(dictionaryattack dictionaryattack/dictionaryattack.cpp)
add_executable(divisors divisors/divisors.cpp)
add_executable(downtime downtime/downtime.cpp)
add_executable(dream dream/dream.cpp)
add_executable(emergency emergency/emergency.cpp)
add_executable(engineeringenglish engineeringenglish/engineeringenglish.cpp)
add_executable(enlarginghashtables enlarginghashtables/enlarginghashtables.cpp)
add_executable(evenup evenup/evenup.cpp)
add_executable(estate estate/estate.cpp)
add_executable(exchangerates exchangerates/exchangerates.cpp)
add_executable(excursion excursion/excursion.cpp)
add_executable(facility facility/facility.cpp facility/fordfulkerson.cpp)
add_executable(flyingsafely flyingsafely/flyingsafely.cpp flyingsafely/minspantree.cpp)
add_executable(fractionallotion fractionallotion/fractionallotion.cpp)
add_executable(frozenrose frozenrose/frozenrose.cpp)
add_executable(george george/george.cpp)
add_executable(gopher2 gopher2/fordfulkerson.cpp gopher2/gopher2.cpp)
add_executable(grandpabernie grandpabernie/grandpabernie.cpp)
add_executable(greatswercporto greatswercporto/greatswercporto.cpp)
add_executable(grille grille/grille.cpp)
add_executable(growlinggears growlinggears/growlinggears.cpp)
add_executable(happyprime happyprime/happyprime.cpp happyprime/primesieve.cpp)
add_executable(hillnumbers hillnumbers/hillnumbers.cpp)
add_executable(honey honey/honey.cpp)
add_executable(hidingplaces hidingplaces/hidingplaces.cpp)
add_executable(humancannonball humancannonball/humancannonball.cpp)
add_executable(imagedecoding imagedecoding/imagedecoding.cpp)
add_executable(interestingintegers interestingintegers/interestingintegers.cpp)
add_executable(islandhopping islandhopping/islandhopping.cpp islandhopping/minspantree.cpp)
add_executable(islands islands/islands.cpp)
add_executable(keyboard keyboard/keyboard.cpp)
add_executable(keypad keypad/keypad.cpp)
add_executable(kinarow kinarow/kinarow.cpp)
add_executable(lexicography lexicography/lexicography.cpp)
add_executable(lockedtreasure lockedtreasure/lockedtreasure.cpp)
add_executable(loowater loowater/loowater.cpp)
add_executable(mali mali/mali.cpp)
add_executable(managingpackaging managingpackaging/managingpackaging.cpp)
add_executable(marblestree marblestree/marblestree.cpp)
add_executable(matchsticks matchsticks/matchsticks.cpp)
add_executable(matryoshka matryoshka/matryoshka.cpp)
add_executable(maxloot maxloot/maxloot.cpp)
add_executable(mosquito mosquito/mosquito.cpp)
add_executable(oop oop/oop.cpp)
add_executable(otpor otpor/otpor.cpp)
add_executable(palindromesubstring palindromesubstring/palindromesubstring.cpp)
add_executable(pathtracing pathtracing/pathtracing.cpp)
add_executable(pivot pivot/pivot.cpp)
add_executable(poklon poklon/poklon.cpp)
add_executable(primal primal/primal.cpp)
add_executable(pripreme pripreme/pripreme.cpp)
add_executable(pubs pubs/pubs.cpp)
add_executable(randomwalking randomwalking/randomwalking.cpp)
add_executable(ratings ratings/ratings.cpp)
add_executable(register register/register.cpp)
add_executable(repeatingdecimal repeatingdecimal/repeatingdecimal.cpp)
add_executable(restaurant restaurant/restaurant.cpp)
add_executable(ricochetrobots ricochetrobots/ricochetrobots.cpp)
add_executable(safe safe/safe.cpp)
add_executable(safety safety/safety.cpp)
add_executable(satisfiability satisfiability/satisfiability.cpp)
add_executable(scenes scenes/scenes.cpp)
add_executable(sequence sequence/sequence.cpp)
add_executable(settlers2 settlers2/settlers2.cpp)
add_executable(sms sms/sms.cpp)
add_executable(snapperhard snapperhard/snapperhard.cpp)
add_executable(speedyescape speedyescape/speedyescape.cpp speedyescape/floydw.cpp)
add_executable(standings standings/standings.cpp)
add_executable(submarines submarines/pointinpolygon.cpp submarines/segmentintersection.cpp submarines/submarines.cpp)
add_executable(subwayplanning subwayplanning/subwayplanning.cpp)
add_executable(sudokunique sudokunique/sudokunique.cpp)
add_executable(sumsets sumsets/sumsets.cpp)
add_executable(squawk squawk/squawk.cpp)
add_executable(tautology tautology/tautology.cpp)
add_executable(telephones telephones/telephones.cpp)
add_executable(timing timing/timing.cpp)
add_executable(touchscreenkeyboard touchscreenkeyboard/touchscreenkeyboard.cpp)
add_executable(towering towering/towering.cpp)
add_executable(towers towers/towers.cpp)
add_executable(tray tray/tray.cpp)
add_executable(trendingtopic trendingtopic/trendingtopic.cpp)
add_executable(unionfind unionfind/disjoint_set.cpp unionfind/unionfind.cpp)
add_executable(undetected undetected/undetected.cpp)
add_executable(virus virus/virus.cpp)
add_executable(visualgo visualgo/visualgo.cpp)
add_executable(xortris xortris/xortris.cpp)
